# NGOS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clean_code.py
benchmark/: Cargo.toml
benchmark/src/: main.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/examples/: python_example.py
bindings/python/src/: lib.rs
certification/: Cargo.toml
certification/src/: main.rs
control_plane/: go.mod  main.go
docs/: architecture.md  benchmark.md  certification.md  memory_spec.md  plugin_abi.md  python_sdk.md  runtime_lifecycle.md  tensor_spec.md
examples/: rust_runtime.rs
ngos_spec/: Cargo.toml
ngos_spec/src/: abi.rs  device.rs  error.rs  lib.rs  memory.rs  tensor.rs
plugin_sdk/: Cargo.toml
plugin_sdk/src/: lib.rs
plugins/cpu_plugin/: Cargo.toml
plugins/cpu_plugin/src/: lib.rs
plugins/cuda_plugin/: Cargo.toml
plugins/cuda_plugin/src/: lib.rs
runtime_core/: Cargo.toml
runtime_core/src/: dispatcher.rs  lib.rs  metrics.rs  registry.rs
tests/: README.md
