
[package]
name = "runtime_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "ngos_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
libloading.workspace = true
ngos_spec.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

