
[package]
name = "ngos"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "ngos"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
runtime_core.workspace = true
ngos_spec.workspace = true

